# flask-langchain-project

./: README.md  app.py  pyproject.toml  rag_service.py  requirements.txt
tests/: test_rag.py
