[project]
name = "flask-rag-support"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.1",
    "flask>=3.1.2",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.2",
    "pypdf>=6.4.1",
    "pytest>=9.0.2",
    "pytest-flask>=1.3.0",
    "python-dotenv>=1.2.1",
    "texto>=0.1.1",
]
